{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 60,
  "lineage": "9443389d-272b-4277-4823-5dff30677de2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c14-ellie-bradley-kafka_pipeline_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0acc77abdfc7ed5a6",
            "arn": "arn:aws:ec2:eu-west-2:129033205317:instance/i-0262ec5d4ddf7be7e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0262ec5d4ddf7be7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "c14-ellie-bradley-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029b315682ad8fe95",
            "private_dns": "ip-10-0-1-41.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-35-178-176-49.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.176.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e6cdd39dd2bfba6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0497831b67192adc2",
            "tags": {
              "Name": "c14-ellie-bradley-ec2"
            },
            "tags_all": {
              "Name": "c14-ellie-bradley-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010ef74edfeaa5788"
            ]
          },
          "dependencies": [
            "aws_security_group.c14-ellie-bradley-kafka_pipeline_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c14-ellie-bradley-kafka_pipeline_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-010ef74edfeaa5788",
            "description": "Security group for EC2 instance to run Kafka pipeline",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-010ef74edfeaa5788",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Kafka-related traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL inbound traffic",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "c14-ellie-bradley-kafka-pipeline-sg",
            "name_prefix": "",
            "owner_id": "129033205317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "c14-ellie-bradley-kafka_pipeline_sg"
            },
            "tags_all": {
              "Name": "c14-ellie-bradley-kafka_pipeline_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0344763624ac09cb6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c14-trainee-ellie-bradley-rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-03914d037c10e4adf",
            "description": "Security group that allows access from anywhere on port 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03914d037c10e4adf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL inbound traffic",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "c14-trainee-ellie-bradley-rds_sg",
            "name_prefix": "",
            "owner_id": "129033205317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security group"
            },
            "tags_all": {
              "Name": "RDS Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0344763624ac09cb6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}